Fix navigation menu on mobile (#24)
* Fix navigation menu on mobile

* Increase side menu width

* Fix for Lena's remarks

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -20,7 +20,7 @@ $grey-color-dark:  darken($grey-color, 25%);
 $blockquote-border-color: #e8e8e8;
 $border-color:            #e6e6e6;
 
-$doc-nav-width:      250px;
+$doc-nav-width:      350px;
 
 $baseUrl:            "/testcafe";
 
